fix spacing

--- a/css/components.css
+++ b/css/components.css
@@ -1,5 +1,3 @@
-/* Toggle */
-
 /* Toggle Switch */
 .switch {
   display: inline-flex;
@@ -43,7 +41,7 @@
 }
 
 /* Slider */
-.slider-container {
+.slider-wrap {
   display: flex;
   align-items: center;
 }
@@ -54,7 +52,7 @@
   border-radius: 5px;
   background: var(--slider);
   outline: none;
-  margin: 20px;
+  margin: 10px;
 }
 
 .slider::-moz-range-thumb {
@@ -63,7 +61,7 @@
   background-color: var(--slider-bg);
   border: none;
   border-radius: 50%;
-  box-shadow: 0px 6px 5px 1px var(--slider);
+  box-shadow: 0px 9px 9px 1px var(--slider);
   background-image: url('/images/icon-slider.svg');
   background-repeat: no-repeat;
   background-position: center;
