--- a/css/index.css
+++ b/css/index.css
@@ -52,16 +52,17 @@ body {
   width: 40%;
   flex-direction: column;
   gap: 1rem;
-  padding: 1rem 1.5rem;
+  padding: 1rem;
   background-color: var(--card-bg);
   border-radius: 8px;
   box-shadow: 0px 20px 30px -5px rgba(127, 137, 185, 0.15);
 }
 
-/* TODO: Even out Padding */
 /* Wrappers */
 .numbers-wrap {
   justify-content: space-between;
+  align-items: center;
+  padding: 5px;
 }
 
 .views-wrap {
@@ -78,13 +79,16 @@ body {
 
 .billing-wrap {
   justify-content: flex-end;
+  gap: 15px;
+  margin: 0px 10px;
+  padding: 10px;
 }
 
 /*CTA Content */
 .cta-wrap {
   justify-content: space-between;
   border-top: 1px solid var(--empty-slider);
-  padding: 1rem;
+  padding: 15px;
 }
 
 .checklist {
